@@ -22,6 +22,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 import org.apache.lucene.util.LuceneTestCase.Slow;
+import org.apache.solr.SolrTestCaseJ4.SuppressSSL;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrServer;
 import org.apache.solr.client.solrj.SolrServerException;
@@ -47,12 +48,8 @@ import org.junit.BeforeClass;
  * Super basic testing, no shard restarting or anything.
  */
 @Slow
+@SuppressSSL     // No SSL for now - it can be too slow
 public class FullSolrCloudDistribCmdsTest extends AbstractFullDistribZkTestBase {
-  
-  static {
-    // No SSL for now - it can be too slow
-    ALLOW_SSL = false;
-  }
   
   @BeforeClass
   public static void beforeSuperClass() {
